--- a/src/stylesheets/_sidebar.scss
+++ b/src/stylesheets/_sidebar.scss
@@ -101,8 +101,8 @@
 	@include breakPointTwo {
 		padding: 20px 30%;
 	}
-
-	@include breakPointThree {
+	
+	@include breakPointFour {
 		padding: 20px 10%;
 	}
 }
