--- a/src/stylesheets/_todos.scss
+++ b/src/stylesheets/_todos.scss
@@ -56,10 +56,3 @@
 		margin: 0 10px;
 	}
 }
-
-.todoTitle {
-	cursor: pointer;
-	&:hover {
-		color: $blue;
-	}
-}
